--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ futures = "0.3.4"
 nom = "5.0.0"
 id3 = "0.5.0"
 walkdir = "2.3.1"
+clap = "2.33.0"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
